--- a/my-profile/src/components/NavBar/index.css
+++ b/my-profile/src/components/NavBar/index.css
@@ -6,6 +6,9 @@
     justify-content: space-around;
     gap: 20px;
     align-items: center;
+
+    position: fixed; 
+    top: 0px;
 }
 
 .space{
@@ -34,4 +37,9 @@
 .letter{
     font-style: italic; 
     font-weight: 700;
+}
+
+a{
+    color:#000000DE;
+    text-decoration: none;
 }
