--- a/my-profile/src/components/Footer/index.css
+++ b/my-profile/src/components/Footer/index.css
@@ -6,7 +6,13 @@
     justify-content: space-between;
     gap: 20px;
     align-items: center;
-    padding:0px 40px
+    padding:0px 40px; /* padding 0px (arriba y abajo) 40px(izq y der)  */
+    
+    /* Propiedades que van juntas. 
+    Position fixed --> hace que el div quede fijo en el bottom*/
+    position: fixed; 
+    bottom: 0px;
+    z-index: 1;
 }
 
 .contacto{font-weight: 700}
