--- a/my-profile/src/index.css
+++ b/my-profile/src/index.css
@@ -1,7 +1,12 @@
+.body{
+    margin-top: 60px;
+    padding-bottom: 80px;
+}
+
 .a{
     width: 100%;
     display: flex;
     flex-direction: column; 
     align-items: center;
-    gap:30px
+    gap:30px;
 }
