--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+.title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 30px;
+    font-size: 20px;
+}
+
 .body{
     margin-top: 60px;
     padding-bottom: 80px;
